# Case-Real-Time-Trading-Dashboard

./: .gitignore  README.md
backend/: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  advanced-trading.cpp  clickhouse_config.xml  docker-compose.yml  package.json  setup_clickhouse.sh  vcpkg.json
backend/src/application/: risk_validator.cpp  risk_validator.hpp
backend/src/domain/: interfaces.hpp  types.hpp
backend/src/infrastructure/cache/: idempotency_cache.cpp  idempotency_cache.hpp
backend/src/infrastructure/database/: clickhouse_repository.cpp  clickhouse_repository.hpp
backend/src/interfaces/: advanced_trading_server.cpp  advanced_trading_server.hpp
backend/src/utils/: parser.hpp
backend/tests/: test_domain_types.cpp  test_idempotency_cache.cpp  test_jwt_inspector.cpp  test_risk_validator.cpp
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  run.sh  vite.config.js
frontend/src/: main.jsx
frontend/src/app/: App.jsx
frontend/src/app/pages/: HomePage.jsx  MarketDetailPage.jsx  OrderHistoryPage.jsx  PerformancePage.jsx
frontend/src/components/: AlertRulesPanel.jsx  ConnectionStatus.jsx  HistoryChart.jsx  MarketDataPanel.jsx  OrderHistoryPanel.jsx  OrderPanel.jsx  Sidebar.jsx  SystemMetricsPanel.jsx  Topbar.jsx
frontend/src/lib/: PricesContext.jsx  WebSocketContext.jsx  websocket.js
